
=== 2.0.17 / 14 Dec 2009

* Don't load net/ssh/authentication/pageant on Windows with Ruby 1.9 [Travis Reeder, Delano Mandelbaum]


=== 2.0.16 / 28 Nov 2009

* Fix for "multiple hosts are separated by whitespace" [Akinori MUSHA]
* Add support for the ProxyCommand directive [Akinori MUSHA]
* Switched from #recv(1) to #readchar in lib/net/ssh/transport/server_version.rb, so that closed sockets are recognized [Alex Peuchert]


=== 2.0.15 / 03 Sep 2009

* Scale back IO#select patch so it mutexes only zero-timeout calls [Daniel Azuma, Will Bryant]


=== 2.0.14 / 28 Aug 2009

* Fix for IO#select threading bug in Ruby 1.8 (LH-1) [Daniel Azuma]

* Fix for "uninitialized constant OpenSSL::Digest::MD5" exception in Net::SFTP [DL Redden]


=== 2.0.13 / 17 Aug 2009

* Added fix for hanging in ServerVersion#negotiate! when using SOCKS5 proxy (GH-9) [Gerald Talton]

* Added support for specifying a list of hosts in .ssh/config, with tests (GH-6) [ckoehler, Delano Mandelbaum]

* Added tests for arcfour128/256/512 lengths, encryption, and decryption [Delano Mandelbaum]

* Skip packet stream tests for arcfour128/256/512 [Delano Mandelbaum]

* Fix for OpenSSL cipher key length because it always returns 16, even when 32 byte keys are required, e.g. for arcfour256 and arcfour512 ciphers [Karl Varga]


=== 2.0.12 / 08 Jun 2009

* Applied patch for arcfour128 and arcfour256 support [Denis Bernard]

* Use unbuffered reads when negotiating the protocol version [Steven Hazel]


=== 2.0.11 / 24 Feb 2009

* Add :key_data option for specifying raw private keys in PEM format [Alex Holems, Andrew Babkin]


=== 2.0.10 / 4 Feb 2009

* Added Net::SSH.configuration_for to make it easier to query the SSH configuration file(s) [Jamis Buck]


=== 2.0.9 / 1 Feb 2009

* Specifying non-nil user argument overrides user in .ssh/config [Jamis Buck]

* Ignore requests for non-existent channels (workaround ssh server bug) [Jamis Buck]

* Add terminate! method for hard shutdown scenarios [Jamis Buck]
